#2044: Pique: Fix buttons on smaller screens

--- a/pique/assets/css/blocks.css
+++ b/pique/assets/css/blocks.css
@@ -440,6 +440,13 @@ body.home .wp-block-table.alignwide .wp-block-table.alignfull {
 	color: #83b6cc;
 }
 
+@media (max-width: 767px) {
+	.wp-block-button .wp-block-button__link {
+		padding: 1em;
+		width: 100%;
+	}
+}
+
 /* Separator */
 
 .wp-block-separator {
